1.0.05-beta
-Fixed white box issue on the pixelate overlay
-More pixelated overlay. It wasn't bad enough
-Updated !about
-Fixed issue with blerp integration not working

1.0.04-beta
-Finished moderator permissions, now you can give certain mods access to help smooth over controlling chat while you focus on gaming
-Mod permissions include refunds, give or remove currency, add or remove a command, or ban and unban a user from using the bot
-Updated "Rate Delay" setting to properly reflect what it does which is add a cooldown per use so they can't spam commands. Added a message that alerts the user of how much time is remaining
-Fixed potential issue of "you have the latest version installed" popping up on start

1.0.03-beta
-Added a auto updater/installer to ease updating. It will download any missing file/changes you may miss while updating it the drag and drop way. You can use it as a stand alone installer as well
-When updating this time make sure you replace the 'Sweat bot.exe' and also add 'Sweat bot Updater.exe' as well.

1.0.02-beta
-Minor UI Tweaks
-Added Volume adjustments to custom sound clips
-Added Xbox Mappings(buttons only)
-Added Loop Mouse to position. Now you can set a position and "stick" your mouse cursor there
-Adjusted command execution patterns so Async commands correctly execute after or during a delay. This should help with some timing issues
-Updated Pixelate Screen with normal non Sync command. Useful if you wish to stack multiple after another
-Removed Trader Menu as it doesn't fit what I'm planning on doing. the !traders command is still available for chat.
-Added option for if commands are paused, it will tell the user that it is paused when they try to run a command. If you pause the commands on the menu, it will notify chat as well
-I made a terrible icon for now
-Added Shutdown PC
-Added Restart PC