@@ -39,7 +39,6 @@ public class CustomCommandHandler
 
 
     private PixelateOverlay pixelateOverlay;
-    private ScreenOverlay screenOverlay;
 
     // Event constants for mouse and keyboard actions
     public const int MOUSEEVENTF_LEFTDOWN = 0x02;
@@ -59,7 +58,6 @@ public class CustomCommandHandler
         this.filePath = Path.Combine("Data", "Profiles", $"{LastUsedProfile}.json");  // Use this.filePath
 
         pixelateOverlay = new PixelateOverlay();
-        screenOverlay = new ScreenOverlay();
 
         _commands = LoadCommandsFromFile(this.filePath);  // Use this.filePath here as well
 
@@ -81,7 +79,7 @@ public class CustomCommandHandler
         { "delay", Delay },
         { "lcloop", LeftClickLoop },
         { "rcloop", RightClickLoop },
-        { "pixelatescreen", OverlayScreen },
+        { "pixelatescreen", PixelateScreen },
         { "shutdownpc", ShutDownPC },
         { "restartpc", RestartPC },
     };
@@ -328,6 +326,25 @@ public class CustomCommandHandler
 
         // Command not found
         return false;
+    }
+
+    public string DebugCommand(string commandName)
+    {
+        if (string.IsNullOrWhiteSpace(commandName))
+        {
+            return "Please specify a command. Example: !cdebug praisesun";
+        }
+
+        commandName = commandName.ToLower(); // Normalize command name
+
+        if (!_commands.ContainsKey(commandName))
+        {
+            return $"Command '{commandName}' was not found.";
+        }
+
+        var cmd = _commands[commandName];
+        string methodsFormatted = string.Join(", ", cmd.Methods);
+        return $"Command: {commandName} | BitCost: {cmd.BitCost} | Methods: {methodsFormatted}";
     }
 
     private void SaveChatCommandsToFile()
@@ -1706,55 +1723,6 @@ public class CustomCommandHandler
             _overlayPixelate.Release(); // Allow the next overlay to proceed
         }
     }
-
-    private void OverlayScreen(TwitchClient client, string channel, string parameter = null)
-    {
-        if (parameter == null)
-        {
-            Console.WriteLine("No parameters specified for OverlayScreen.");
-            return;
-        }
-
-        var match = Regex.Match(parameter, @"(\d+)"); // Match numeric parameters
-        if (!match.Success || !int.TryParse(match.Value, out int duration))
-        {
-            Console.WriteLine("Invalid parameter format. Expected format: Duration.");
-            return;
-        }
-
-        _screenOverlay.Wait(); // Ensure sequential execution
-
-        try
-        {
-            if (UiBot.Properties.Settings.Default.isDebugCommands)
-            {
-                Console.WriteLine($"OverlayScreen for {duration} milliseconds.");
-            }
-
-            // Ensure UI thread safety
-            screenOverlay.Invoke((MethodInvoker)(() =>
-            {
-                screenOverlay.StartOverlay();
-            }));
-
-            // Synchronously wait for the specified duration
-            Thread.Sleep(duration); // Use Thread.Sleep to wait for the duration
-
-            screenOverlay.Invoke((MethodInvoker)(() =>
-            {
-                screenOverlay.StopOverlay();
-            }));
-        }
-        catch (Exception ex)
-        {
-            Console.WriteLine($"Error in OverlayScreen: {ex.Message}");
-        }
-        finally
-        {
-            _screenOverlay.Release(); // Allow the next overlay to proceed
-        }
-    }
-
 
     private void ShutDownPC(TwitchClient client, string channel, string parameter = null)
     {
